# portfolio

./: .gitignore  LICENSE  README.md  session_plan.txt
.claude/: settings.json
.github/workflows/: deploy.yml  terraform-ci.yml  web-ci.yml
apps/web/: .dockerignore  .env.example  Dockerfile  amplify.yml  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/components/: architecture-image-panel.tsx  architecture-renderer.tsx  demo-error-boundary.tsx  mermaid-diagram.tsx  session-pill.tsx  site-footer.tsx  site-header.tsx  solution-card.tsx  solution-status-badge.tsx  solution-tabs.tsx
apps/web/lib/: api.ts  solutions.ts
apps/web/solutions/: _registry.ts  _types.ts
docs/: architecture.md  deployment.md
docs/solutions/: agentic-hr.md  intelli-search.md  linkedin-generator.md
infra/local/docker/: docker-compose.local.yml
infra/multi-ec2/docker/: docker-compose.multi-ec2.yml
infra/multi-ec2/terraform/: main.tf  outputs.tf  user-data.sh.tftpl  variables.tf
infra/single-ec2/docker/: docker-compose.prod.yml
infra/single-ec2/terraform/: backend.tf  main.tf  outputs.tf  variables.tf  versions.tf
infra/terraform/: backend.tf  main.tf  outputs.tf  variables.tf
scripts/: bootstrap-tf-state.sh  sync-from-source.sh
scripts/local/: bootstrap-env.sh  down.sh  up.sh
scripts/multi-ec2/: bootstrap-tf-state.sh  deploy.sh
scripts/single-ec2/: bootstrap-tf-state.sh  deploy-on-ec2.sh  sync-from-source.sh  tunnel-opensearch.sh
services/agentic-hr/: README.md  agentic_hr_db.dump  init-db.sh
services/agentic-hr/backend/: .env.example  Dockerfile  config.py  logger.py  main.py  requirements.txt
services/agentic-hr/ingestion/: chunker.py  config.py  db.py  embedder.py  ingest.py  logger.py  requirements.txt  summarizer.py
services/intelli-search/: .dockerignore  .env.example  Dockerfile  README.md  opensearch_queries.txt  requirements.txt  search_config.yaml
services/intelli-search/app/: config.py  main.py
services/intelli-search/data-pipeline/: .dockerignore  Dockerfile  country_taxonomy.json  data_ingestion_pipeline.py  (+5 more)
services/linkedin-generator/: .env.example  Dockerfile  README.md  api.py  pyproject.toml  requirements.txt
services/linkedin-generator/backend/: main.py
services/linkedin-generator/backend/api/: deps.py  errors.py  main.py  rate_limit.py  schemas.py
services/linkedin-generator/backend/api/routes/: health.py  history.py  images.py  posts.py  scout.py
services/linkedin-generator/backend/core/: jobs.py  logging.py  paths.py  pricing.py  settings.py
services/linkedin-generator/backend/guardrails/: __init__.py  config.py  detector.py  policy.py  redactor.py
services/linkedin-generator/backend/post_generator/: crew.py  streaming.py  visual_director.py
services/linkedin-generator/backend/post_generator/config/: agents.yaml  tasks.yaml
services/linkedin-generator/backend/prompts/: __init__.py  image_prompt_builder.txt  post_critic.txt  post_writer.txt  scout_extractor.txt  scout_synthesis.txt  scout_synthesizer.txt
services/linkedin-generator/backend/scout/: cache.py  engine.py  extractor.py  memory.py  query_bank.py  renderer.py  synthesizer.py  types.py  uplift.md  url_utils.py
services/linkedin-generator/backend/scout/modules/: _feeds.py  base.py  community_sentiment.py  expert_synthesis.py  frontier_labs.py  technical_deep_dive.py  tooling_and_tactics.py  top_newsletters.py
services/linkedin-generator/backend/tools/: __init__.py  image_gen.py
services/linkedin-generator/backend/utils/: cost_tracker.py  history.py  post_parser.py  user_profile.py
services/linkedin-generator/src/: main.py
services/linkedin-generator/src/engines/authority_crew/: crew.py
services/linkedin-generator/src/engines/pulse_scout_modules/: community_sentiment.py  crawl4ai_helper.py  time_utils.py
services/linkedin-generator/src/linkedin_post_generator/: main.py
services/linkedin-generator/src/linkedin_post_generator/engines/: pulse_scout.py
services/linkedin-generator/src/linkedin_post_generator/engines/authority_crew/: crew.py
services/linkedin-generator/src/linkedin_post_generator/engines/authority_crew/config/: agents.yaml  tasks.yaml
services/linkedin-generator/src/linkedin_post_generator/engines/pulse_scout_modules/: base.py  long_form_strategy.py  technical_deep_dive.py  tooling_and_tactics.py
services/linkedin-generator/src/linkedin_post_generator/tools/: __init__.py  hn_search.py
services/linkedin-generator/src/tools/: __init__.py  arxiv_search.py  dalle_image.py
services/linkedin-generator/src/utils/: cost_tracker.py  user_profile.py
(+174 files in other folders)
