[project]
name = "linkedin_post_generator"
version = "0.1.0"
description = "LinkedIn Post Generator — Dual Engine (Pulse Scout + Authority Crew) with Streamlit UI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.11,<3.14"
dependencies = [
    "crewai[tools]==1.9.3",
    "streamlit>=1.32.0",
    "arxiv>=2.1.0",
    "tavily-python>=0.3.3",
    "anthropic>=0.25.0",
    "openai>=1.30.0",
    "langchain-ollama>=0.1.0",
    "langchain-openai>=0.1.0",
    "httpx>=0.27.0",
    "tiktoken>=0.7.0",
    "Pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "crawl4ai>=0.4.0",
]

[project.scripts]
linkedin_post_generator = "linkedin_post_generator.main:run"
run_crew = "linkedin_post_generator.main:run"
run_scout = "linkedin_post_generator.main:run_scout"
run_app = "linkedin_post_generator.main:run_app"
train = "linkedin_post_generator.main:train"
replay = "linkedin_post_generator.main:replay"
test = "linkedin_post_generator.main:test"
run_with_trigger = "linkedin_post_generator.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv]
# onnxruntime 1.20+ dropped Intel Mac (x86_64) wheels — pin to last supported version
override-dependencies = ["onnxruntime>=1.16.0,<=1.19.2"]
