[project]
name = "linkedin_post_generator"
version = "0.1.0"
description = "LinkedIn Post Generator — Dual Engine (Pulse Scout + Authority Crew) with Streamlit UI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.11,<3.14"
dependencies = [
    "crewai[tools]==1.9.3",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "streamlit>=1.32.0",
    "arxiv>=2.1.0",
    "tavily-python>=0.3.3",
    "anthropic>=0.25.0",
    "openai>=1.30.0",
    "langchain-ollama>=0.1.0",
    "langchain-openai>=0.1.0",
    "httpx>=0.27.0",
    "tiktoken>=0.7.0",
    "Pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "crawl4ai>=0.4.0",
]

[project.scripts]
linkedin_post_generator = "main:run"
run_crew = "main:run"
run_scout = "main:run_scout"
run_app = "main:run_app"
train = "main:train"
replay = "main:replay"
test = "main:test"
run_with_trigger = "main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
# onnxruntime 1.20+ dropped Intel Mac (x86_64) wheels — pin to last supported version
override-dependencies = ["onnxruntime>=1.16.0,<=1.19.2"]
